--- a/target-front/.prettierignore
+++ b/target-front/.prettierignore
@@ -1,37 +1,8 @@
-back/HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+###
+# Place your Prettier ignore content here
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
-
+###
+# .gitignore content is duplicated here due to https://github.com/prettier/prettier/issues/8506
 
 # Created by .ignore support plugin (hsz.mobi)
 ### Node template
@@ -112,6 +83,9 @@ dist
 # Serverless directories
 .serverless
 
+# IDE / Editor
+.idea
+
 # Service worker
 sw.*
 
@@ -120,4 +94,3 @@ sw.*
 
 # Vim swap files
 *.swp
-
