--- a/target-front/package.json
+++ b/target-front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "target-front",
+  "name": "target-crm",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -14,12 +14,15 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
+    "lodash": "^4.17.21",
+    "material-design-icons-iconfont": "^5.0.1",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
+    "vue-flexable-dnd": "^0.2.0",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
-    "vuetify": "^2.6.10",
-    "material-design-icons-iconfont": "^5.0.1"
+    "vuedraggable": "^2.24.3",
+    "vuetify": "^2.6.10"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
